testsuite/tests/typecheck/should_fail/T1633.hs
-- This just tests what the kind error message looks like
-- Trac #1633

module T1633 where

instance Functor Bool
